--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="index.js"></script>
+    <!-- Call Service Worker -->
     <script>
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker.register("sw.js").then(function () {
